--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ body{
 
   position: absolute;
   left: 50%;
-  bottom: -40px;
+  bottom: -58px;
 
   transform: translateX(-50%);
   width: 200px;
@@ -128,10 +128,18 @@ body{
   z-index: -1;
 }
 
-.catalog-item h3{
-  margin-top: 13px;
-
+.catalog-item a{
+  display: block;
   text-align: center;
+
+  margin-top: 13px;
+}
+
+.catalog-item h3{
+  display: inline;
+
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+
   font-weight: 500;
   font-size: 16px;
   line-height: 22px;
@@ -142,9 +150,11 @@ body{
   position: absolute;
   bottom: 101px;
   left: 6px;
+
+  text-shadow: 0.5px 0.9px 3px rgba(49, 50, 53, 0.5);
   font-weight: bold;
   font-size: 45px;
-  line-height: 13px;
+  line-height: 45px;
   color: #ffffff;
 }
 
@@ -464,7 +474,7 @@ a.login:focus ~ .header-login{
   display: block;
 }
 
-/* header navigation */
+/* header basket */
 
 .header-navigation a.basket{
   display: flex;
@@ -485,6 +495,17 @@ a.basket svg{
 
 a.basket:hover svg{
   fill: #000000;
+}
+
+
+
+/* header navigation */
+
+.header-navigation a.full-basket{
+  position: relative;
+  width: 120px;
+  background-color: #f7f6f3;
+  color: #323232;
 }
 
 .header-navigation .site-navigation{
@@ -1322,4 +1343,285 @@ a.basket:hover svg{
   height: 45px;
   margin-top: 25px;
   align-self: flex-end;
+}
+
+/* catalog page */
+.inner-page main{
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 25px;
+}
+
+.inner-page .breadcrumbs{
+  display: flex;
+  flex-wrap: wrap;
+
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  font-size: 14px;
+  line-height: 16px;
+  color: #ffffff;
+}
+
+.breadcrumbs a{
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+
+  font-size: 14px;
+  line-height: 16px;
+  color: #ffffff;
+}
+
+.breadcrumbs li{
+  position: relative;
+  padding-right: 10px;
+  margin-right: 5px;
+}
+
+.breadcrumbs li::after{
+  content: '»';
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.breadcrumbs li:last-child::after{
+  display: none;
+}
+
+.inner-page .main-title{
+  padding: 0;
+  margin: 0;
+  font-weight: bold;
+  font-size: 35px;
+  line-height: 41px;
+  color: #ffffff;
+}
+
+.filter-form .fieldset-wrap{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.filter-form fieldset{
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+.filter-form label{
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  color: #ffffff;
+}
+.filter-form .filter-box{
+  height: 35px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 20px;
+  padding: 5px 10px;
+}
+
+.filter-form select{
+  width: 195px;
+
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
+}
+
+.filter-form p{
+  margin: 0;
+  padding: 0;
+  padding-left: 10px;
+  margin-bottom: 5px;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #ffffff;
+}
+
+.filter-form ul{
+  margin: 0;
+  padding: 0;
+}
+
+.fat-wrap .fat-list,
+.extenders-wrap .extenders-list{
+  display: flex;
+  flex-wrap: wrap;
+
+  list-style: none;
+  margin: 0;
+}
+
+.filter-form .sort-wrap{
+  width: 200px;
+  margin-right: 15px;
+}
+
+.filter-form .price-wrap{
+  width: 230px;
+}
+
+.filter-form .range-box{
+  position: relative;
+  width: 220px;
+}
+
+.range-box .range-scale{
+  width: 176px;
+  height: 4px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.range-box .range-scale::after{
+  content: '';
+  width: 99px;
+  height: 4px;
+
+  position: absolute;
+  top: 50%;
+  left: 23px;
+  transform: translateY(-50%);
+
+  background-color: #ffffff;
+}
+
+.range-scale .range-min,
+.range-scale .range-max{
+  width: 20px;
+  height: 20px;
+  border: none;
+  border-radius: 50%;
+
+  position: absolute;
+  top: -8px;
+  left: 23px;
+
+  z-index: 1;
+}
+
+.range-scale .range-min::after,
+.range-scale .range-max::after{
+  content: '';
+  width: 4px;
+  height: 4px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  border-radius: 50%;
+  background-color: #ababab;
+}
+
+.range-scale .range-max{
+  left: 121px;
+}
+
+.filter-form .fat-wrap{
+  width: 450px;
+}
+
+.fat-list label{
+  position: relative;
+  padding-left: 30px;
+}
+
+.fat-list label::before{
+  content: '';
+  width: 22px;
+  height: 22px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  border-radius: 50%;
+  border: 4px solid #ffffff;
+  background-color: transparent;
+}
+
+input.fat-radio:checked + label::after{
+  content: '';
+  width: 8px;
+  height: 8px;
+
+  position: absolute;
+  top: 7px;
+  left: 7px;
+
+  border-radius: 50%;
+  background-color: #ffffff;
+}
+
+.fat-list li,
+.extenders-list li{
+  margin-right: 5px;
+}
+
+.filter-form .extenders-list{
+  width: 700px;
+  float: left;
+  margin-right: 15px;
+}
+
+.filter-form button[type="submit"]{
+  display: block;
+  width: 145px;
+  height: 35px;
+
+  border: 2px solid #ffffff;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.2);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  color: #ffffff;
+}
+
+.extenders-list label{
+  position: relative;
+  padding-left: 30px;
+}
+
+.extenders-list label::before{
+  content: '';
+  width: 20px;
+  height: 20px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  border: 2px solid rgba(255, 255, 255, 0.8);
+  border-radius: 3px;
+  background-color: transparent;
+}
+
+input.extenders-check:checked + label::before{
+  display: none;
+}
+
+input.extenders-check:checked + label::after{
+  content: '';
+  width: 24px;
+  height: 20px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  background: url('../img/checkbox-on.png') no-repeat center center;
 }
